--- a/_moe-kindergarten/Events & Celebrations/2024.md
+++ b/_moe-kindergarten/Events & Celebrations/2024.md
@@ -1,40 +1,77 @@
 ---
 title: "2024"
 permalink: /moe-kindergarten/events-celebrations/2024/
-variant: markdown
+variant: tiptap
 description: ""
 third_nav_title: Events & Celebrations
 ---
-<table border="0" style="border-collapse: collapse; width: 100%; margin-left: auto; margin-right: auto;">
+<p></p>
+<table style="minWidth: 50px">
+<colgroup>
+<col>
+<col>
+</colgroup>
 <tbody>
-	
 <tr>
-<td style="width: 34.5713%; text-align: center;"><p style="text-align: center;"><strong><span style="color: #800000;">Chinese New Year Celebration</span></strong></p><iframe allowfullscreen="true" height="300" width="320" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQlQdUbkslaXezJ7kbmiMLdqaTnNDDda5U-LK7CGhLsZ8ewrWNpukyVpJiIHwDo0o5vOfVUzTlg4X4U/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+<td rowspan="1" colspan="1">
+<p><strong>Chinese New Year Celebration</strong>
+</p>
+<div class="iframe-wrapper">
+<iframe referrerpolicy="strict-origin-when-cross-origin" height="300" width="320" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vRnWOdDZjhxZGecOIJUij7tZSHIpUJOV2aW-2AZuiHnhBrq0c-nzt9ulA6vmGkQBw/pubembed?start=false&amp;loop=false&amp;delayms=5000"></iframe>
+</div>
 </td>
-
-<td style="width: 38.0101%; text-align: center;"> <p><strong><span style="color: #800000;">Hari Raya Puasa Celebration</span></strong></p><iframe allowfullscreen="true" height="300" width="320" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQPfcVgWtLJ0iG-dWFDc3RkZq8Um0RIqPjLm-s_wpI_7omKerbfp8sZI9h7SVqojgHpkFSmlM7v14li/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe> 
+<td rowspan="1" colspan="1">
+<p><strong>Hari Raya Puasa Celebration</strong>
+</p>
+<div class="iframe-wrapper">
+<iframe referrerpolicy="strict-origin-when-cross-origin" height="300" width="320" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQPfcVgWtLJ0iG-dWFDc3RkZq8Um0RIqPjLm-s_wpI_7omKerbfp8sZI9h7SVqojgHpkFSmlM7v14li/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+</div>
 </td>
 </tr>
-	
 <tr>
-<td style="width: 34.5713%; text-align: center;"><p><strong><span style="color: #800000;">Racial Harmony Day Celebration </span></strong></p><iframe allowfullscreen="true" height="300" width="320" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vRu0jpDsm_SbnPjfLdNWDFjk_x0vH62IIP8MbOSKRMqUnXQ2IvhpLAPOb7LLNBbEp0nv6v6x4V3ua-D/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+<td rowspan="1" colspan="1">
+<p><strong>Racial Harmony Day Celebration</strong>
+</p>
+<div class="iframe-wrapper">
+<iframe referrerpolicy="strict-origin-when-cross-origin" height="300" width="320" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vRu0jpDsm_SbnPjfLdNWDFjk_x0vH62IIP8MbOSKRMqUnXQ2IvhpLAPOb7LLNBbEp0nv6v6x4V3ua-D/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+</div>
 </td>
-
-<td style="width: 38.0101%; text-align: center;"><p><strong><span style="color: #800000;">National Day Celebration</span></strong></p><iframe allowfullscreen="true" height="300" width="320" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vT2qpQpAalCta5SS0rByrH8j97o_SsruPKstIg5EwxfH_u53bKbHy9efV4qNu1ErfhHgrggT9cHVJVL/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+<td rowspan="1" colspan="1">
+<p><strong>National Day Celebration</strong>
+</p>
+<div class="iframe-wrapper">
+<iframe referrerpolicy="strict-origin-when-cross-origin" height="300" width="320" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vT2qpQpAalCta5SS0rByrH8j97o_SsruPKstIg5EwxfH_u53bKbHy9efV4qNu1ErfhHgrggT9cHVJVL/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+</div>
 </td>
 </tr>
-
 <tr>
-<td style="width: 34.5713%; text-align: center;"><p><strong><span style="color: #800000;">Children's Day Celebration</span></strong></p><iframe allowfullscreen="true" height="300" width="320" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vRboEQyfLTTHNqhUMiyEHUOIEuYsab9l0T90RqzlMV4mVIzrVsUPfqZD_9fyarf4FVaOcNH4fk7lLOP/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+<td rowspan="1" colspan="1">
+<p><strong>Children's Day Celebration</strong>
+</p>
+<div class="iframe-wrapper">
+<iframe referrerpolicy="strict-origin-when-cross-origin" height="300" width="320" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vRboEQyfLTTHNqhUMiyEHUOIEuYsab9l0T90RqzlMV4mVIzrVsUPfqZD_9fyarf4FVaOcNH4fk7lLOP/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+</div>
 </td>
-	
-<td style="width: 38.0101%; text-align: center;"><p> <strong><span style="color: #800000;">Deepavali Celebration</span></strong></p><iframe allowfullscreen="true" height="300" width="320" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQ4SIZ5oC6uOwcatTHlSpMMqRPEKt0Y7c_ktNkj3RenIcuHsbhSMY_Tg5kW5-ZJXEdjSlYDZ91bWtT4/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+<td rowspan="1" colspan="1">
+<p><strong>Deepavali Celebration</strong>
+</p>
+<div class="iframe-wrapper">
+<iframe referrerpolicy="strict-origin-when-cross-origin" height="300" width="320" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQ4SIZ5oC6uOwcatTHlSpMMqRPEKt0Y7c_ktNkj3RenIcuHsbhSMY_Tg5kW5-ZJXEdjSlYDZ91bWtT4/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+</div>
 </td>
 </tr>
-
-	<tr>
-<td style="width: 38.0101%; text-align: center;"><p><strong><span style="color: #800000;">LIFE@MK</span></strong></p><iframe allowfullscreen="true" height="300" width="320" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vS05WGkWzZm7_NKG-oCqYWHdv2rwUm6KqMyEDqfEgLPswedXZdm1KhXRSiRb53mdc7hp-gYx02ilW10/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+<tr>
+<td rowspan="1" colspan="1">
+<p><strong>LIFE@MK</strong>
+</p>
+<div class="iframe-wrapper">
+<iframe referrerpolicy="strict-origin-when-cross-origin" height="300" width="320" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vS05WGkWzZm7_NKG-oCqYWHdv2rwUm6KqMyEDqfEgLPswedXZdm1KhXRSiRb53mdc7hp-gYx02ilW10/embed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+</div>
+</td>
+<td rowspan="1" colspan="1">
+<p></p>
 </td>
 </tr>
 </tbody>
 </table>
+<p></p>
