{"message":"Update file: 2025.md","userId":"1620","fileName":"2025.md"}

--- a/_moe-kindergarten/Events & Celebrations/2025.md
+++ b/_moe-kindergarten/Events & Celebrations/2025.md
@@ -5,3 +5,9 @@ variant: tiptap
 description: ""
 third_nav_title: Events & Celebrations
 ---
+<p><strong>Celebration 2025</strong>
+</p>
+<div class="iframe-wrapper">
+<iframe referrerpolicy="strict-origin-when-cross-origin" height="300" width="320" allowfullscreen="true" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vRNAPYGnm-NZRsXmjD6g3jgdUKmkfORQ5YsOss2CYg14R5dXAVEPPIaanSTnuyJNKEe7S4cT0FlcpjA/pubembed?start=true&amp;loop=true&amp;delayms=5000"></iframe>
+</div>
+<p></p>
